goit-markup-hw-07

--- a/css/styles.css
+++ b/css/styles.css
@@ -46,13 +46,25 @@ h1, h2, h3, p , header , main{
 }
 ul { padding-inline-start: 0px; }
 
-.navigation-r,.box-navigation{
+.header__list ,.header__list-two{
     font-weight: 500;
     font-size: 14px;
     line-height: 1.7;
     align-items: center;
 }
 
+
+.header__list, .header__list-two {
+    justify-content: space-between;
+    display: flex;
+    margin: 0px;
+  
+}
+
+.header__list-two
+{
+    margin-left: auto;
+}
 
 .promo  {
     color:  var(--main-se-color);
@@ -121,8 +133,9 @@ ul { padding-inline-start: 0px; }
     font-size: 26px;
     line-height: 1.38;
     color: var(--main-sr-color);
- 
+    display: inline-block;
 }   
+
 .logo-web, .logo-b{
     color:
     var(--main-one-color);
@@ -130,6 +143,22 @@ ul { padding-inline-start: 0px; }
 .logo-a , .logo-wite { 
     color: var(--main-sir-color);
 }
+.logo-a.active{
+    margin-bottom: 20px;
+}
+a.logo.active.logo-activ
+{
+  margin-right:93px ; 
+   padding-top: 20px;
+   padding-bottom: 24px;
+}
+.footer-wraper__logo {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+}
+
+
 .section-comand {
     background-color: var(--main-so-color);
 }
@@ -204,6 +233,19 @@ ul { padding-inline-start: 0px; }
 .adress-a  {
     opacity: 1;
 }
+.footer {
+    box-sizing: border-box;
+    background: var(--main-fa-color);
+    padding-top: 60px ;
+   padding-bottom: 60px ;
+}
+
+.adress-li-a  {
+    margin-bottom: 9px;
+}
+.adress-li-a:last-child  {
+    margin-bottom: 0;
+}
 
 .bot-button:hover ,.bot-button:focus {
     background-color:  var(--main-btn-color);
@@ -223,12 +265,7 @@ ul { padding-inline-start: 0px; }
     margin: -1px;
  
 }
-.adress {
-    box-sizing: border-box;
-    background: var(--main-fa-color);
-    padding-top: 60px ;
-   padding-bottom: 60px ;
-}
+
 .frend { 
     display: flex;
     justify-content:space-around;
@@ -292,10 +329,7 @@ border-radius: 4px;
     font-weight: 400;
 }
 
-.logo{ 
-    display: inline-block;
 
-}
 .active {
     display: inline-block;
 }
@@ -334,22 +368,12 @@ border-radius: 4px;
    
 }
 
-.navigation-r, .box-navigation {
-    justify-content: space-between;
-    display: flex;
-    margin: 0px;
-  
-}
    
-.wrapper-q { display: flex;
+.header__wrapper-q { display: flex;
     flex-wrap: wrap; 
     align-items: baseline;
   justify-content: start;
 
-}
-
-.logo-a.active{
-    margin-bottom: 20px;
 }
 
 
@@ -386,16 +410,8 @@ border-radius: 4px;
 .div_anime {
     margin-left: 32px;
 }
-.box-navigation
-{
-    margin-left: auto;
-}
 
-a.logo.active.logo-activ{
-  margin-right:93px ; 
-   padding-top: 20px;
-   padding-bottom: 24px;
-}
+
 .address-ul {
     margin: 0px;
 }
@@ -419,12 +435,7 @@ header {
    border: 1px solid #ECECEC;
      
 }
-.adress-li-a  {
-    margin-bottom: 9px;
-}
-.adress-li-a:last-child  {
-    margin-bottom: 0;
-}
+
 /*
 .li-tehnology {
     flex-basis: calc(100%-30px*3)/4;
@@ -569,11 +580,7 @@ header {
     justify-content: start;
   
 }
-.logo__footer {
-    display: flex;
-    gap: 156px;
-    align-items: baseline;
-}
+
 .addres__footer {
 margin-top: -44px;
 }
@@ -658,8 +665,7 @@ margin-top: -44px;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 .animashn:hover:after {
-  /*  opacity: 1;
-   width: 100%;*/
+  
    transform: scaleX(1);
 /*transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);*/
 
@@ -894,8 +900,6 @@ margin-top: -44px;
      
      }
 
-    
-
   /* Modal */
 
 .backdrop {
@@ -967,6 +971,7 @@ margin-top: -44px;
 .button-footer__text{
  display: flex;
     padding: 0px;
+    border: 0px;
     padding-left: 28px;
     width: 200px;
     height: 50px;
