goit-markup-hw-07
goit-markup-hw-07

--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,11 @@ html {
     --main-icon-color: #AFB1B8;
 
   }
+header 
+  {
+    border: 1px solid #ECECEC;
+      
+ }
 img {
     display: block;
 }
@@ -162,24 +167,19 @@ a.logo.active.logo-activ
 .section-comand {
     background-color: var(--main-so-color);
 }
-
+/*
 .bend { 
-    font-weight: 700px;
-    font-size: 36px;
-    line-height: 1.17;
-    text-align: center; 
+   
     padding-bottom: 50px;
    
-}
-.li-tehnology{
-    width: 270px;
+}*/
+.section-tehnology__item
+{
+    width: 270px; 
   /* flex-basis: calc((100% - 30px*3)/4);*/
 }
 
-.li-tehnology.li-tehnology-right {  
-    margin-right: 0px;
-}
-.tehnology  {
+.section-list__tehnology {
     display: flex; 
    flex-wrap: wrap;
     text-align:left; 
@@ -187,19 +187,24 @@ a.logo.active.logo-activ
    
 }
 
-.foto {
+.section-foto__list{
     display: flex; 
    justify-content: space-between ; 
-   margin-top: 50px;
-  
+ 
 }
-.subtitle, .btn {
+.section-frend__subtitle, .btn {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.17;
     color:  var(--main-se-color);
 }
-.profession {
+.section-frend__subtitle {
+    margin-bottom: 10px;
+}
+.section-frend__subtitle, .section-frend__text { text-align: center;
+}
+
+.section-frend__text {
     font-size: 16px;
     line-height: 1.17;
     color:  var(--main-to-color);
@@ -211,19 +216,22 @@ a.logo.active.logo-activ
     line-height: 1.17;
     color: var(--main-se-color);
     text-align: center; 
+    margin-bottom: 50px;
 }
-.headline {
+.section-tehnology__headline {
     font-weight: 700;
     font-size: 14px;
     line-height: 1.17;
     color: var(--main-se-color);
 }
-.text {
+.section-tehnology__text {
+    font-weight: 400;
     font-size: 14px;
     line-height: 1.71;
     color: var(--main-to-color);
 }
 .adress-b, .adress-c, .adress-bi, .adress-ci, .adress-a  {
+    font-weight: 400;
     font-size: 14px;
     line-height: 1.71;
     color:  var(--main-sir-color);
@@ -252,7 +260,7 @@ a.logo.active.logo-activ
 }
 
 
-.subject {
+.hidden__header{
     position: absolute;
     white-space: nowrap;
     width: 1px;
@@ -266,7 +274,8 @@ a.logo.active.logo-activ
  
 }
 
-.frend { 
+
+.section-frend__list{ 
     display: flex;
     justify-content:space-around;
     margin: 0px;
@@ -295,6 +304,7 @@ a.logo.active.logo-activ
 }
 
 .widget {
+       font-weight: 400;
         font-size: 16px;
         line-height: 1.88;
         color: var(--main-to-color);
@@ -306,8 +316,6 @@ a.logo.active.logo-activ
         line-height: 2;
         color: var(--main-se-color);
         margin-bottom: 4px;
-}
-.subtitle, .profession { text-align: center;
 }
 
 .btn:hover{
@@ -322,13 +330,8 @@ a.logo.active.logo-activ
     background-color: var(--main-one-color); 
     color: var(--main-sir-color);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-border-radius: 4px;
-
+    border-radius: 4px;
 }
-.cool {
-    font-weight: 400;
-}
-
 
 .active {
     display: inline-block;
@@ -399,9 +402,7 @@ border-radius: 4px;
   
 }
 
-.subtitle {
-    margin-bottom: 10px;
-}
+
 
 .navigation-b ,.navigation-bi {
     margin-left: 50px;
@@ -424,17 +425,14 @@ border-radius: 4px;
   margin-top: 94px;
    
 }
-.frend-block {
+.section-frend__link {
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
     padding-bottom: 30px;
     background-color: var(--main-sir-color);
 }
 
-header {
-   border: 1px solid #ECECEC;
-     
-}
+
 
 /*
 .li-tehnology {
@@ -471,12 +469,15 @@ header {
    border-right:1px solid #EEEEEE ;
 }
 
-.section__pictuary {
+.section-item__wraper {
     border-radius: 4px;
     background: var(--main-so-color);
     width: 270px;
     height: 120px;
     margin-bottom: 30px;
+    display: flex;  
+    align-items: center;
+    justify-content: center;
  
 }
 .div__svg {
@@ -515,17 +516,11 @@ header {
     height: 92px;
     background: var(--main-icn-cololor);
 }
+/*
 .text_section {
 
-   width: 700px;
-   size: 36px;
-  height: 1.37;
-  color: var(--main-se-color) ;
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
   padding-bottom: 50px;
-}
+} */
 
 .link__sots {
     width: 44px;
@@ -554,7 +549,7 @@ header {
         transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
 
-.sotsial__link {
+.sotsial__list{
     display: flex;
     gap: 10px;
     justify-content:  center ;
@@ -605,14 +600,14 @@ margin-top: -44px;
     color: var(--main-sir-color);
 }
 
-.title__text {
+.section-foto__title{
     font-weight: 700;
     font-size: 14px;
     line-height: 1.17;
     color: var(--main-sir-color);
     text-transform: uppercase;
 }
-.wrop__text {
+.section-foto__wraper {
     width: 370px;
     padding: 0px;
     position: absolute;
@@ -624,7 +619,7 @@ margin-top: -44px;
     bottom: 0;
     
 }
-.foto__box {
+.section-foto__link{
     position: relative ; 
 }
 
@@ -733,12 +728,8 @@ margin-top: -44px;
     height: 60px;
   
 }
-.section__pictuary  {
-    display: flex;  
-    align-items: center;
-    justify-content: center;
-}
-.icon__antenna {
+
+.section-tehnology__svg {
     display: flex;  
     align-items: center;
     justify-content: center;
