--- a/css/styles.css
+++ b/css/styles.css
@@ -754,17 +754,19 @@ margin-top: -44px;
     padding-bottom: 8px;
   }
   
-  .label-text {
+  .label-text, .privacy-input {
     font-size: 12px;
     line-height: 1.16;
     letter-spacing: 0.01em;
     color: #757575;
   }
+
   
   .field {
     height: 40px;
     position: relative;
     margin-bottom: 10px;
+
   }
   
   .input {
@@ -784,6 +786,7 @@ margin-top: -44px;
   }
   
   .field-icon {
+    fill: var(--main-to-color);
     position: absolute;
     left: 12px;
     top: 50%;
@@ -812,7 +815,7 @@ margin-top: -44px;
   .privacy {
     display: flex;
     justify-content: center;
-    align-items: baseline;
+    align-items: center;
   }
   
   .privacy-wrapp {
@@ -860,13 +863,9 @@ margin-top: -44px;
     font-size: 14px;
     line-height: 1.7;
     margin-left: 9px;
+    letter-spacing: 3%;
   }
-  
-  .button {
-    display: flex;
-    margin-right: auto;
-    margin-left: auto;
-  }
+ 
 
    .privacy-link {
     color: var(--main-one-color);
@@ -884,7 +883,7 @@ margin-top: -44px;
         font-size: 16px;
         margin: auto;
          margin-top: 20px;
-        font-weight: 700px;
+        font-weight: 700;
         display: flex;  
        align-items: center;
        justify-content: center;
@@ -970,10 +969,11 @@ margin-top: -44px;
     font-size: 16px;
     line-height: 1.87;
     color: var(--main-sir-color);
-    background-color: #2196F3;
+    background-color: 188CE8;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     align-items: center;
+    justify-content: center;
    
 }
 .svg-send {
