--- a/css/styles.css
+++ b/css/styles.css
@@ -745,7 +745,7 @@ margin-top: -44px;
     line-height: 1.15;
     text-align: center;
     letter-spacing: 0.03em;
-  
+    margin-bottom: 12px;
     color: var(--main-se-color);
   }
   
@@ -754,7 +754,7 @@ margin-top: -44px;
     padding-bottom: 8px;
   }
   
-  .label-text, .privacy-input {
+  .label-text, .input {
     font-size: 12px;
     line-height: 1.16;
     letter-spacing: 0.01em;
@@ -911,9 +911,7 @@ margin-top: -44px;
   
   .modal {
     position: absolute;
-    margin-bottom: 0px;
     width: 528px;
-    height: 581px;
     padding: 40px;
     top: 50%;
     left: 50%;
@@ -974,6 +972,8 @@ margin-top: -44px;
     border-radius: 4px;
     align-items: center;
     justify-content: center;
+    letter-spacing: 0.06em;
+
    
 }
 .svg-send {
