--- a/css/styles.css
+++ b/css/styles.css
@@ -780,7 +780,7 @@ margin-top: -44px;
   .input:focus {
     border-color: var(--main-one-color);
   }
-  
+ 
   .field-input {
     padding: 11px 15px 11px 40px;
   }
@@ -937,14 +937,18 @@ margin-top: -44px;
     border-radius: 50%;
     background-color: transparent;
   }
-.footer-div__mail {
+.footer-div__mail , .footer-input__mail {
+    display: flex;
+    align-items: center;
     width: 358px;
     height: 50px;
+    border: 0px;
     border: 1px  solid var(--main-sir-color);
     drop-shadow:(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
-    padding-top: 15px;
     padding-left: 16px;
+    color:  rgba(255, 255, 255, 0.6);
+    background-color: var(--main-fa-color);
 }
 .footer-batton {
     display: flex;
@@ -967,7 +971,7 @@ margin-top: -44px;
     font-size: 16px;
     line-height: 1.87;
     color: var(--main-sir-color);
-    background-color: 188CE8;
+    background-color: var(--main-btn-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     align-items: center;
