--- a/css/styles.css
+++ b/css/styles.css
@@ -867,9 +867,10 @@ margin-top: -44px;
     margin-left: 9px;
   }
  
-
    .privacy-link {
     color: var(--main-one-color);
+    text-decoration: underline;
+ 
   }
  
    .button-form {
@@ -937,7 +938,14 @@ margin-top: -44px;
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 50%;
     background-color: transparent;
+    transition: /*fill*/ 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
+.modal-close:hover {
+   border-color: var(--main-one-color);
+   fill: var(--main-one-color);
+   
+} 
+
 .footer-div__mail , .footer-input__mail {
     display: flex;
     align-items: center;
@@ -966,7 +974,7 @@ margin-top: -44px;
     padding: 0px;
     border: 0px;
     padding-left: 28px;
-    width: 200px;
+    padding-right: 28px;
     height: 50px;
     font-weight: 700;
     font-size: 16px;
@@ -983,9 +991,7 @@ margin-top: -44px;
 }
 .svg-send {
     margin-left: 10px;
- /* width: 24px;
-    height: 24px; */
-   
+ 
 }
 
 .div_anime { display: flex;
