--- a/css/styles.css
+++ b/css/styles.css
@@ -824,7 +824,8 @@ margin-top: -44px;
     justify-content: center;
     width: 15px;
     height: 14px;
-    border: 1px solid;
+    border: 0.2px solid;
+    border-color: var(--main-sir-color);
     border-radius: 2px;
     transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -940,6 +941,7 @@ margin-top: -44px;
     background-color: transparent;
     transition: /*fill*/ 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
+
 .modal-close:hover {
    border-color: var(--main-one-color);
    fill: var(--main-one-color);
