--- a/css/styles.css
+++ b/css/styles.css
@@ -480,20 +480,20 @@ a.logo.active.logo-activ
     justify-content: center;
  
 }
-.div__svg {
+.menu-list__icon {
     justify-content: center;
     align-items: center;
    display: flex;
 }
 
-.link__li__foot {
+.menu-list__link {
   
      display: flex;
      justify-content: center;
      align-items: center; 
     }
 
-.li__client__a {
+.menu-list__item {
     display: flex;
     justify-content: center;
     align-items: center; 
@@ -539,12 +539,12 @@ a.logo.active.logo-activ
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.li__client__a:focus, .li__client__a:hover {
+.menu-list__item:focus, .menu-list__item:hover {
     fill: var(--main-one-color);
     border-color: var(--main-one-color);
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
- .li__client__a , .link__sots {
+ .menu-list__item, .link__sots {
         fill: var(--main-icon-color);
         transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
@@ -555,7 +555,7 @@ a.logo.active.logo-activ
     justify-content:  center ;
     
 }
-.link__foot {
+.menu-list {
     display: flex;
     flex-wrap: wrap;
     column-gap: 30px;
@@ -720,7 +720,7 @@ margin-top: -44px;
     color:  var(--main-se-color) ;
 }
 
-.logo4 {
+.menu-list__svg {
     display: flex;
     justify-content: center;
     align-items: center;
