--- a/css/styles.css
+++ b/css/styles.css
@@ -777,12 +777,12 @@ margin-top: -44px;
     transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   
-  .input:focus {
+.input:focus {
     border-color: var(--main-one-color);
   }
  
   input:checked {
-   background-color: #2196F3;
+   background-color: var(--main-one-color);
   }
  
   .field-input {
