--- a/css/styles.css
+++ b/css/styles.css
@@ -841,7 +841,8 @@ margin-top: -44px;
     display: flex;
     align-items: center;
     justify-content: center;
-    opacity: 0;
+    /*opacity: 0;*/
+
    /* transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
     fill: var(--main-sir-color);
     background-color: var(--main-one-color);*/
