--- a/css/styles.css
+++ b/css/styles.css
@@ -593,12 +593,8 @@ margin-top: -44px;
     background-color: rgba(255, 255, 255, 0.1); 
 }
 
-.pictur__text {
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 1.56;
-    color: var(--main-sir-color);
-}
+
+
 
 .section-foto__title{
     font-weight: 700;
@@ -667,17 +663,32 @@ margin-top: -44px;
 }
 /* Анимация */
 
-.box_portfol_img::after { 
-    content:'';
-    position:  absolute;
-    top:0px;
-    left: 0px;
+.pictur__text {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 1.56;
+    color: var(--main-sir-color);
+ 
+}
+
+
+.picture-img-wrap:hover .box_portfol_img{
+    transform: translatex(0);
+  }
+  
+  .box_portfol_img{
+    position: absolute;
+    padding: 63px 24px;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    background-color: var(--main-one-color);
-    transform: translateY(100% ) ;
+    background-color:  var(--main-one-color);
+  
+    transform: translateY(100%);
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+  }
+  
 
 .picture-img-wrap {
     width: 370px;
@@ -685,9 +696,7 @@ margin-top: -44px;
     position: relative;
     overflow: hidden;
 }
-.picture-img-wrap:hover .box_portfol_img::after {
-    transform: translateY(0);
-}
+
 .svg__foot, .svg-foot
 {
     background-color: rgba(255, 255, 255, 0.1);
