goit-markup-hw-06

--- a/css/styles.css
+++ b/css/styles.css
@@ -620,7 +620,7 @@ margin-top: -44px;
 }
 
 .close__btn {
-    fill: var(--main-sr-color) ;
+    filpictur__textbox_portfol_imgl: var(--main-sr-color) ;
 }
 .navigation-a ,.animashn, .navigation-bi {
     position: relative;
