--- a/css/styles.css
+++ b/css/styles.css
@@ -192,7 +192,7 @@ a.logo.active.logo-activ
    justify-content: space-between ; 
  
 }
-.section-frend__subtitle, .btn {
+.section-frend__subtitle, .items__btn {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.17;
@@ -291,8 +291,7 @@ a.logo.active.logo-activ
   
 }
 
-.btn { 
-    width:100px;
+.items__btn { 
     height: 38px;
     top:180px;
     left:979px;
@@ -302,6 +301,36 @@ a.logo.active.logo-activ
     border-radius: 4px;
     cursor:  pointer;
 }
+.items__btn-a {
+    width: 73px; ;
+}
+.items__btn-b {
+    width: 125px; ;
+}
+.items__btn-c {
+    width: 112px; ;
+}
+.items__btn-d {
+    width: 103px; ;
+}
+.items__btn-i {
+    width: 130px; ;
+}
+.items__btn:hover{
+    background-color: var(--main-one-color); 
+    color: var(--main-sir-color);
+    transition-duration: 0.5s;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.items__btn:focus{
+    background-color: var(--main-one-color); 
+    color: var(--main-sir-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
+}
+
 
 .widget {
        font-weight: 400;
@@ -318,20 +347,6 @@ a.logo.active.logo-activ
         margin-bottom: 4px;
 }
 
-.btn:hover{
-    background-color: var(--main-one-color); 
-    color: var(--main-sir-color);
-    transition-duration: 0.5s;
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-    border-radius: 4px;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.btn:focus{
-    background-color: var(--main-one-color); 
-    color: var(--main-sir-color);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-    border-radius: 4px;
-}
 
 .active {
     display: inline-block;
@@ -432,27 +447,10 @@ a.logo.active.logo-activ
     background-color: var(--main-sir-color);
 }
 
-
-
 /*
 .li-tehnology {
     flex-basis: calc(100%-30px*3)/4;
 } */
-.btn-a {
-    width: 73px; ;
-}
-.btn-b {
-    width: 125px; ;
-}
-.btn-c {
-    width: 112px; ;
-}
-.btn-d {
-    width: 103px; ;
-}
-.btn-i {
-    width: 130px; ;
-}
 
 .img-block {
     display: block;
@@ -618,10 +616,10 @@ margin-top: -44px;
 .section-foto__link{
     position: relative ; 
 }
-
+/*
 .close__btn {
     filpictur__textbox_portfol_imgl: var(--main-sr-color) ;
-}
+}  */
 .navigation-a ,.animashn, .navigation-bi {
     position: relative;
 }
@@ -835,15 +833,14 @@ margin-top: -44px;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 15px;
-    height: 14px;
+    width: 16px;
+    height: 15px;
     border: 0.2px solid;
-    border-color: var(--main-sir-color);
+    border-color: var(--main-se-color);
     border-radius: 2px;
-    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: opacity border 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
     fill: var(--main-sir-color);
-    background-color: var(--main-one-color);
+    background-color: var(--main-sir-color);
 }
   
   .privacy-icon {
@@ -851,10 +848,6 @@ margin-top: -44px;
     align-items: center;
     justify-content: center;
     opacity: 0;
-
-   /* transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    fill: var(--main-sir-color);
-    background-color: var(--main-one-color);*/
    
   }
  .privacy-input{
@@ -869,7 +862,8 @@ margin-top: -44px;
   }
   
 .privacy-input:checked + .privacy-wrapp {
-    border: transparent;
+    border: transparent; 
+    background-color: #188CE8;
   }
   
   .privacy-input:checked + .privacy-wrapp .privacy-icon {
@@ -969,7 +963,7 @@ margin-top: -44px;
     height: 50px;
     border: 0px;
     border: 1px  solid var(--main-sir-color);
-    drop-shadow:(0px 4px 4px rgba(0, 0, 0, 0.15));
+   /* drop-shadow:(0px 4px 4px rgba(0, 0, 0, 0.15));*/
     border-radius: 4px;
     padding-left: 16px;
     color:  rgba(255, 255, 255, 0.6);
