--- a/css/styles.css
+++ b/css/styles.css
@@ -192,7 +192,7 @@ a.logo.active.logo-activ
    justify-content: space-between ; 
  
 }
-.section-frend__subtitle, .items__btn {
+.section-frend__subtitle, .portfolio-items__btn {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.17;
@@ -291,7 +291,7 @@ a.logo.active.logo-activ
   
 }
 
-.items__btn { 
+.portfolio-items__btn { 
     height: 38px;
     top:180px;
     left:979px;
@@ -301,22 +301,22 @@ a.logo.active.logo-activ
     border-radius: 4px;
     cursor:  pointer;
 }
-.items__btn-a {
+.portfolio-items__btn-a {
     width: 73px; ;
 }
-.items__btn-b {
+.portfolio-items__btn-b {
     width: 125px; ;
 }
-.items__btn-c {
+.portfolio-items__btn-c {
     width: 112px; ;
 }
-.items__btn-d {
+.portfolio-items__btn-d {
     width: 103px; ;
 }
-.items__btn-i {
+.portfolio-items__btn-i {
     width: 130px; ;
 }
-.items__btn:hover{
+.portfolio-items__btn:hover{
     background-color: var(--main-one-color); 
     color: var(--main-sir-color);
     transition-duration: 0.5s;
@@ -324,7 +324,7 @@ a.logo.active.logo-activ
     border-radius: 4px;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.items__btn:focus{
+.portfolio-items__btn:focus{
     background-color: var(--main-one-color); 
     color: var(--main-sir-color);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -746,22 +746,24 @@ margin-top: -44px;
 
 
 /*форма*/
-.form-title {
+.form-title {  
     font-weight: 700;
+    margin-left: auto;
+    margin-right: auto;
     font-size: 20px;
-    line-height: 1.15;
+    line-height: 1.17;
     text-align: center;
     letter-spacing: 0.03em;
-    margin-bottom: 12px;
+    margin-bottom: 8px;
     color: var(--main-se-color);
   }
   
   .label {
     display: block;
-    padding-bottom: 8px;
+    margin-bottom: 4px;
   }
   
-  .label-text, .input {
+  .label-text, .input { display: inline;
     font-size: 12px;
     line-height: 1.16;
     letter-spacing: 0.01em;
@@ -772,11 +774,12 @@ margin-top: -44px;
   .field {
     height: 40px;
     position: relative;
-    /*margin-bottom: 10px; */
+    margin-bottom: 5px;
 
   }
   
   .input {
+    display: block;
     width: 100%;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
@@ -797,9 +800,9 @@ margin-top: -44px;
   }
   
   .field-icon {
-    fill: var(--main-to-color);
+    fill: var(--main-se-color);
     position: absolute;
-    left: 12px;
+    left: 15px;
     top: 50%;
     transform: translateY(-50%);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -827,6 +830,7 @@ margin-top: -44px;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 30px;
   }
   
   .privacy-wrapp {
@@ -835,7 +839,7 @@ margin-top: -44px;
     justify-content: center;
     width: 16px;
     height: 15px;
-    border: 0.2px solid;
+    border: 2px solid;
     border-color: var(--main-se-color);
     border-radius: 2px;
     transition: opacity border 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
@@ -892,12 +896,13 @@ margin-top: -44px;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
         border-radius: 4px;
         font-size: 16px;
-        margin: auto;
-         margin-top: 30px;
+       margin-left: auto;
+       margin-right: auto;
         font-weight: 700;
         display: flex;  
        align-items: center;
        justify-content: center;
+       cursor: pointer;
      
      }
 
