--- a/sass/main.scss
+++ b/sass/main.scss
@@ -331,14 +331,14 @@ a.logo.active.logo-activ
 }
 
 
-.widget {
+.portfolio-list__widget {
        font-weight: 400;
         font-size: 16px;
         line-height: 1.88;
         color: var(--main-to-color);
            
 }
-.aside {
+.portfolio-list__aside {
         font-weight: 700;
         font-size: 18px;
         line-height: 2;
@@ -351,7 +351,7 @@ a.logo.active.logo-activ
     display: inline-block;
 }
 
-.list { 
+.portfolio-list { 
     display: flex;
     flex-wrap: wrap; 
     align-items: center;
@@ -362,7 +362,7 @@ a.logo.active.logo-activ
 
     }
 
-.items, .list {
+.items, .portfolio-list {
     margin-bottom: 66px; 
 }
 
@@ -456,7 +456,7 @@ a.logo.active.logo-activ
     border-radius: 0px;
     margin-bottom: 30px;
 }
-.card-text {border: 0px;
+.portfolio-list__card-text {border: 0px;
     padding-left: 24px;
     padding-top: 20px;
     padding-right: 24px;
@@ -580,7 +580,7 @@ margin-top: -44px;
     fill:var(--main-sir-color);
   
 }
-.picture:hover {
+.portfolio-list__item:hover {
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     border-radius: 4px;
 
@@ -615,10 +615,7 @@ margin-top: -44px;
 .section-foto__link{
     position: relative ; 
 }
-/*
-.close__btn {
-    filpictur__textbox_portfol_imgl: var(--main-sr-color) ;
-}  */
+
 .navigation-a ,.animashn, .navigation-bi {
     position: relative;
 }
@@ -634,11 +631,9 @@ margin-top: -44px;
     top: 46px;
     border-radius: 2px;
 }
-/*
-.animashn { 
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) ; 
 
-}*/
+/*animashn*/
+
  .animashn::after {
     content: '';
     position: absolute;
@@ -660,7 +655,7 @@ margin-top: -44px;
 }
 /* Анимация */
 
-.pictur__text {
+.portfolio-list__text {
     font-weight: 400;
     font-size: 18px;
     line-height: 1.56;
@@ -669,11 +664,12 @@ margin-top: -44px;
 }
 
 
-.picture-img-wrap:hover .box_portfol_img{
+.portfolio-list__img-wrap:hover .portfolio-list__box-img
+{
     transform: translatex(0);
-  }
+}
   
-  .box_portfol_img{
+  .portfolio-list__box-img{
     position: absolute;
     padding: 63px 24px;
     top: 0;
@@ -687,7 +683,7 @@ margin-top: -44px;
   }
   
 
-.picture-img-wrap {
+.portfolio-list__img-wrap {
     width: 370px;
     height: 294px;
     position: relative;
