--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -7,3 +7,17 @@
     align-items: center;
    
 }
+
+.section {
+    margin-top: 94px;
+}  
+
+.active {
+    display: inline-block;
+}
+
+.img-block {
+    display: block;
+    border-radius: 0px;
+    margin-bottom: 30px;
+}
