--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,7 @@
 @import "./base/fonts";
 @import "./base/reser";
 @import "./utils/vars";
+@import "./utils/placeholder";
 @import "./components/container";
 @import "./components/header";
 @import "./components/logo";
