--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -4,9 +4,8 @@
 }
 
 .items  {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+   
+    @extend %flex ;
     margin-left: auto; 
     margin-right: auto;
     margin-top: 100px;
