--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -1,28 +1,22 @@
 .menu-list {
-    display: flex;
+    @extend %flex ;  
     flex-wrap: wrap;
     column-gap: 30px;
     margin-bottom: 94px;
-    align-items: center;
-    justify-content: center;
+ 
 }
 
 .menu-list__icon {
-    justify-content: center;
-    align-items: center;
-   display: flex;
+    @extend %flex ;  
 }
 
 .menu-list__link {
-     display: flex;
-     justify-content: center;
-     align-items: center; 
+    @extend %flex ;  
+  
 }
 
 .menu-list__item {
-    display: flex;
-    justify-content: center;
-    align-items: center; 
+    @extend %flex ;  
     width: 170px;
     height: 92px;
     border: 1px solid #AFB1B8;
@@ -31,9 +25,7 @@
 
 .wrup__ul {
     padding-top: 94px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    @extend %flex ;  
     flex-wrap: wrap;
     gap: 30px;
 }
@@ -48,10 +40,7 @@
     width: 44px;
     height: 44px;
     border-radius: 50%;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    @extend %flex ;  
     color:  var(--main-so-color);
 }
   
