--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -78,7 +78,7 @@
 }
 
 .button-footer__text{
- display: flex;
+   @extend %flex ;  
     padding: 0px;
     border: 0px;
     padding-left: 28px;
@@ -91,8 +91,7 @@
     background-color: var(--main-btn-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
-    align-items: center;
-    justify-content: center;
+   
     letter-spacing: 0.06em;
 
    
