--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -15,13 +15,12 @@
 }
 
 .portfolio-list { 
- display: flex;
- flex-wrap: wrap; 
- align-items: center;
- justify-content: space-between;
- margin-left: auto;
- margin-right: auto;
- row-gap: 30px ;
+     @extend %flex ;  
+      flex-wrap: wrap; 
+      justify-content: space-between;
+     margin-left: auto;
+      margin-right: auto;
+     row-gap: 30px ;
 }
 
 .items, .portfolio-list {
@@ -29,9 +28,7 @@
 }
 
 .box-p {
- display: flex;
- align-items: center;
- justify-content: center;
+     @extend %flex ;  
  margin-left: auto; 
  margin-right: auto;
  margin-top: 0px;
