--- a/sass/components/_properties.scss
+++ b/sass/components/_properties.scss
@@ -32,9 +32,7 @@
     width: 270px;
     height: 120px;
     margin-bottom: 30px;
-    display: flex;  
-    align-items: center;
-    justify-content: center;
+    @extend %flex ;  
 }
 .section-tehnology__headline {
     font-weight: 700;
@@ -50,9 +48,7 @@
 }
 
 .section-tehnology__svg {
-    display: flex;  
-    align-items: center;
-    justify-content: center;
+    @extend %flex ;  
     width: 70px;
     height: 70px;
 }
