--- a/css/main.css
+++ b/css/main.css
@@ -316,18 +316,21 @@ ul {
   --main-icon-color: #AFB1B8;
 }
 
-.box-p, .portfolio-list, .link__sots, .wrup__ul, .menu-list__item, .menu-list__link, .menu-list__icon, .menu-list, .items, .button-footer__text, .button-form, .privacy-icon, .privacy-wrapp, .privacy, .section-tehnology__svg, .section-item__wraper {
+.box-p, .portfolio-list, .sotsial__list, .link__sots, .wrup__ul, .menu-list__item, .menu-list__link, .menu-list__icon, .menu-list, .items, .menu-list__svg, .button-footer__text, .modal-close, .button-form, .privacy-icon, .privacy-wrapp, .privacy, .section-tehnology__svg, .section-item__wraper, .header__list, .header__list-two {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.box-p, .portfolio-list, .items, .button-form, .form-title, .hero-big, .hero, .container {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .container {
   max-width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
   align-items: center;
 }
 
@@ -349,12 +352,6 @@ ul {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.7;
-  align-items: center;
-}
-
-.header__list, .header__list-two {
-  justify-content: space-between;
-  display: flex;
   margin: 0px;
 }
 
@@ -451,6 +448,19 @@ a.logo.active.logo-activ {
   padding-bottom: 24px;
 }
 
+.hero {
+  max-width: 1600px;
+  background-color: var(--main-fa-color);
+  text-align: center;
+  padding-bottom: 200px;
+  padding-top: 200px;
+  justify-content: center;
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.5)), url(../images/img1/hero.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  outline: 1px solid black;
+}
 .hero-big {
   width: 700px;
   font-weight: 900;
@@ -458,25 +468,7 @@ a.logo.active.logo-activ {
   line-height: 1.36;
   color: var(--main-sir-color);
   text-align: center;
-  margin-left: auto;
-  margin-right: auto;
   margin-bottom: 30px;
-}
-
-.hero {
-  max-width: 1600px;
-  background-color: var(--main-fa-color);
-  text-align: center;
-  padding-bottom: 200px;
-  padding-top: 200px;
-  margin-left: auto;
-  margin-right: auto;
-  justify-content: center;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.5)), url(../images/img1/hero.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  outline: 1px solid black;
 }
 
 .bot-button {
@@ -492,6 +484,9 @@ a.logo.active.logo-activ {
   border-radius: 4px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   cursor: pointer;
+}
+.bot-button:hover, .bot-button:focus {
+  background-color: var(--main-btn-color);
 }
 
 .hidden__header {
@@ -630,8 +625,6 @@ a.logo.active.logo-activ {
 /*форма*/
 .form-title {
   font-weight: 700;
-  margin-left: auto;
-  margin-right: auto;
   font-size: 20px;
   line-height: 1.17;
   text-align: center;
@@ -667,13 +660,8 @@ a.logo.active.logo-activ {
   outline: transparent;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .input:focus {
   border-color: var(--main-one-color);
-}
-
-input:checked {
-  background-color: var(--main-one-color);
 }
 
 .field-input {
@@ -783,8 +771,6 @@ input:checked {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   font-size: 16px;
-  margin-left: auto;
-  margin-right: auto;
   font-weight: 700;
   cursor: pointer;
 }
@@ -823,9 +809,6 @@ input:checked {
   position: absolute;
   width: 30px;
   height: 30px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   right: 8px;
   top: 8px;
   padding: 0;
@@ -835,7 +818,6 @@ input:checked {
   background-color: transparent;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .modal-close:hover {
   fill: var(--main-one-color);
 }
@@ -922,16 +904,7 @@ input:checked {
   display: inline-block;
 }
 
-.div_anime:hover, .div_anime:focus {
-  color: var(--main-one-color);
-  fill: var(--main-one-color);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 .menu-list__svg {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   width: 106px;
   height: 60px;
 }
@@ -941,6 +914,11 @@ input:checked {
   align-items: center;
   fill: var(--main-to-color);
   margin-left: 32px;
+}
+.div_anime:hover, .div_anime:focus {
+  color: var(--main-one-color);
+  fill: var(--main-one-color);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /*animashn*/
@@ -960,7 +938,6 @@ input:checked {
 
 .animashn:hover:after {
   transform: scaleX(1);
-  /*transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);*/
 }
 
 .footer {
@@ -1024,10 +1001,6 @@ input:checked {
   margin-right: 50px;
 }
 
-.address-ul {
-  margin: 0px;
-}
-
 .footer-container {
   display: flex;
   justify-content: space-between;
@@ -1051,16 +1024,6 @@ input:checked {
   background-color: rgba(255, 255, 255, 0.1);
 }
 
-.bot-button:hover, .bot-button:focus {
-  background-color: var(--main-btn-color);
-}
-
-.items {
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 100px;
-}
-
 .portfolio-items__btn {
   height: 38px;
   top: 180px;
@@ -1070,6 +1033,20 @@ input:checked {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+}
+.portfolio-items__btn:hover {
+  background-color: var(--main-one-color);
+  color: var(--main-sir-color);
+  transition-duration: 0.5s;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio-items__btn:focus {
+  background-color: var(--main-one-color);
+  color: var(--main-sir-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
 }
 
 .portfolio-items__btn-a {
@@ -1092,20 +1069,9 @@ input:checked {
   width: 130px;
 }
 
-.portfolio-items__btn:hover {
-  background-color: var(--main-one-color);
-  color: var(--main-sir-color);
-  transition-duration: 0.5s;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-  border-radius: 4px;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.portfolio-items__btn:focus {
-  background-color: var(--main-one-color);
-  color: var(--main-sir-color);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-  border-radius: 4px;
+.items {
+  margin-top: 100px;
+  margin-bottom: 66px;
 }
 
 .menu-list {
@@ -1114,12 +1080,18 @@ input:checked {
        column-gap: 30px;
   margin-bottom: 94px;
 }
-
 .menu-list__item {
   width: 170px;
   height: 92px;
   border: 1px solid #AFB1B8;
   border-radius: 4px;
+  fill: var(--main-icon-color);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.menu-list__item:focus, .menu-list__item:hover {
+  fill: var(--main-one-color);
+  border-color: var(--main-one-color);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .wrup__ul {
@@ -1139,29 +1111,17 @@ input:checked {
   height: 44px;
   border-radius: 50%;
   color: var(--main-so-color);
+  fill: var(--main-icon-color);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .link__sots:hover, .link__sots:focus {
   fill: var(--main-sir-color);
   background-color: var(--main-one-color);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.menu-list__item:focus, .menu-list__item:hover {
-  fill: var(--main-one-color);
-  border-color: var(--main-one-color);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.menu-list__item, .link__sots {
-  fill: var(--main-icon-color);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 .sotsial__list {
-  display: flex;
   gap: 10px;
-  justify-content: center;
 }
 
 .portfolio-list__widget {
@@ -1180,20 +1140,17 @@ input:checked {
 }
 
 .portfolio-list {
+  margin-bottom: 66px;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin-left: auto;
-  margin-right: auto;
   row-gap: 30px;
 }
-
-.items, .portfolio-list {
-  margin-bottom: 66px;
+.portfolio-list__item:hover {
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
 }
 
 .box-p {
-  margin-left: auto;
-  margin-right: auto;
   margin-top: 0px;
 }
 
@@ -1206,11 +1163,6 @@ input:checked {
   border-bottom: 1px solid #EEEEEE;
   border-left: 1px solid #EEEEEE;
   border-right: 1px solid #EEEEEE;
-}
-
-.portfolio-list__item:hover {
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-  border-radius: 4px;
 }
 
 /*
