--- a/sass/components/_anime.scss
+++ b/sass/components/_anime.scss
@@ -44,18 +44,10 @@
 }
 
 
-.div_anime:hover ,.div_anime:focus {
-    color: var(--main-one-color);
-    fill: var(--main-one-color); 
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-}
 
 
 .menu-list__svg {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @extend %flex ;  
     width: 106px;
     height: 60px;
   
@@ -66,6 +58,13 @@
     align-items: center;
     fill: var(--main-to-color);
     margin-left: 32px;
+    &:hover ,&:focus {
+        color: var(--main-one-color);
+        fill: var(--main-one-color); 
+        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+    }
+    
 }
 
 
@@ -85,8 +84,6 @@
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 .animashn:hover:after {
-  
    transform: scaleX(1);
-/*transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);*/
 
 }
