--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,16 +1,4 @@
 
-.bot-button:hover ,.bot-button:focus {
-    background-color:  var(--main-btn-color);
-}
-
-.items  {
-   
-    @extend %flex ;
-    margin-left: auto; 
-    margin-right: auto;
-    margin-top: 100px;
-}
-
 .portfolio-items__btn { 
     height: 38px;
     top:180px;
@@ -20,6 +8,20 @@
     border: none; 
     border-radius: 4px;
     cursor:  pointer;
+    &:hover{
+        background-color: var(--main-one-color); 
+        color: var(--main-sir-color);
+        transition-duration: 0.5s;
+        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+        border-radius: 4px;
+        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    &:focus{
+        background-color: var(--main-one-color); 
+        color: var(--main-sir-color);
+        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+        border-radius: 4px;
+    }
 }
 
 .portfolio-items__btn-a {
@@ -42,18 +44,10 @@
     width: 130px; ;
 }
 
-.portfolio-items__btn:hover{
-    background-color: var(--main-one-color); 
-    color: var(--main-sir-color);
-    transition-duration: 0.5s;
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-    border-radius: 4px;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.portfolio-items__btn:focus{
-    background-color: var(--main-one-color); 
-    color: var(--main-sir-color);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-    border-radius: 4px;
+.items  {
+    @extend %flex ;
+    @extend %margin-auto;
+    margin-top: 100px;
+    margin-bottom: 66px; 
 }
