--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -2,10 +2,8 @@
     max-width: 1200px;
     padding-left: 15px; 
     padding-right: 15px; 
-    margin-left: auto ;
-    margin-right: auto ;
     align-items: center;
-   
+    @extend %margin-auto;
 }
 
 .section {
