--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -2,8 +2,7 @@
 /*форма*/
 .form-title {  
     font-weight: 700;
-    margin-left: auto;
-    margin-right: auto;
+    @extend %margin-auto;
     font-size: 20px;
     line-height: 1.17;
     text-align: center;
@@ -39,15 +38,13 @@
     border-radius: 4px;
     outline: transparent;
     transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  
-.input:focus {
+      
+  &:focus {
     border-color: var(--main-one-color);
+}
+
   }
- 
-  input:checked {
-   background-color: var(--main-one-color);
-  }
+
  
   .field-input {
     padding: 11px 15px 11px 40px;
@@ -145,9 +142,8 @@
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
         border-radius: 4px;
         font-size: 16px;
-       margin-left: auto;
-       margin-right: auto;
         font-weight: 700;
+        @extend %margin-auto;
         @extend %flex ;  
        cursor: pointer;
      
