--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,32 +1,31 @@
 
- 
-.hero-big {
-    width: 700px;
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
-    color:  var(--main-sir-color);
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 30px;  
-}
+
 .hero { 
   max-width: 1600px;
-    background-color :var(--main-fa-color);
-    text-align: center;
-    padding-bottom: 200px;
-   padding-top: 200px;
-    margin-left: auto;
-    margin-right: auto;
-   justify-content: center;
-   background-image:linear-gradient(rgba(47, 48, 58, 0.4)
+  background-color :var(--main-fa-color);
+  text-align: center;
+  padding-bottom: 200px;
+  padding-top: 200px;
+  @extend %margin-auto;
+  justify-content: center;
+  background-image:linear-gradient(rgba(47, 48, 58, 0.4)
    ,rgba(47, 48, 58, 0.5)
    ), url(../images/img1/hero.jpg);
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    outline: 1px solid black;
+    
+   &-big {
+    width: 700px;
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    color:  var(--main-sir-color);
+    text-align: center;
+    @extend %margin-auto;
+    margin-bottom: 30px;  
+}
 
 }
 .bot-button {
@@ -42,5 +41,9 @@
     border-radius: 4px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     cursor: pointer;
+    &:hover , &:focus {
+      background-color:  var(--main-btn-color);
+    }
 
 }
+
