--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -3,16 +3,13 @@
     flex-wrap: wrap;
     column-gap: 30px;
     margin-bottom: 94px;
+    
+    &__icon {
+    @extend %flex ; }
+
+    &__link {
+        @extend %flex; }
  
-}
-
-.menu-list__icon {
-    @extend %flex ;  
-}
-
-.menu-list__link {
-    @extend %flex ;  
-  
 }
 
 .menu-list__item {
@@ -21,6 +18,14 @@
     height: 92px;
     border: 1px solid #AFB1B8;
     border-radius: 4px;
+    fill: var(--main-icon-color);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+        &:focus, &:hover {
+            fill: var(--main-one-color);
+            border-color: var(--main-one-color);
+            transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
 }
 
 .wrup__ul {
@@ -35,33 +40,24 @@
     background: var(--main-icn-cololor);
 }
 
-
 .link__sots {
     width: 44px;
     height: 44px;
     border-radius: 50%;
     @extend %flex ;  
     color:  var(--main-so-color);
-}
-  
-.link__sots:hover , .link__sots:focus {
-    fill: var(--main-sir-color);
-    background-color: var(--main-one-color);
+    fill: var(--main-icon-color);
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.menu-list__item:focus, .menu-list__item:hover {
-    fill: var(--main-one-color);
-    border-color: var(--main-one-color);
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
- .menu-list__item, .link__sots {
-        fill: var(--main-icon-color);
+    &:hover , &:focus {
+        fill: var(--main-sir-color);
+        background-color: var(--main-one-color);
         transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
- }
+    }
+}
 
 .sotsial__list{
-    display: flex;
+    @extend %flex ;  
     gap: 10px;
-    justify-content:  center ;   
+     
 }
