--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -31,13 +31,11 @@
       0px 2px 1px rgba(0, 0, 0, 0.2);
   }
   
-  .modal-close {
+.modal-close {
     position: absolute;
+    @extend %flex ; 
     width: 30px;
     height: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     right: 8px;
     top: 8px;
     padding: 0;
@@ -46,13 +44,11 @@
     border-radius: 50%;
     background-color: transparent;
     transition: /*fill*/ 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-
-.modal-close:hover {
- 
-   fill: var(--main-one-color);
-   
-} 
+    
+    &:hover {
+       fill: var(--main-one-color);
+  } 
+}
 
 .footer-div__mail , .footer-input__mail {
     display: flex;
@@ -76,25 +72,21 @@
     color: var(--main-sir-color);
 
 }
-
 .button-footer__text{
-   @extend %flex ;  
-    padding: 0px;
-    border: 0px;
-    padding-left: 28px;
-    padding-right: 28px;
-    height: 50px;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.87;
-    color: var(--main-sir-color);
-    background-color: var(--main-btn-color);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-   
-    letter-spacing: 0.06em;
-
-   
+  @extend %flex ;  
+  padding: 0px;
+  border: 0px;
+  padding-left: 28px;
+  padding-right: 28px;
+  height: 50px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  color: var(--main-sir-color);
+  background-color: var(--main-btn-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px; 
+  letter-spacing: 0.06em; 
 }
 .svg-send {
     margin-left: 10px;
