--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -15,23 +15,23 @@
 }
 
 .portfolio-list { 
-     @extend %flex ;  
+     @extend %flex ; 
+     margin-bottom: 66px;  
       flex-wrap: wrap; 
       justify-content: space-between;
-     margin-left: auto;
-      margin-right: auto;
+      @extend %margin-auto;
      row-gap: 30px ;
+     &__item:hover {
+          box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+          border-radius: 4px;
+     }
 }
 
-.items, .portfolio-list {
- margin-bottom: 66px; 
-}
 
 .box-p {
      @extend %flex ;  
- margin-left: auto; 
- margin-right: auto;
- margin-top: 0px;
+     @extend %margin-auto;
+      margin-top: 0px;
 }
 
 .portfolio-list__card-text {border: 0px;
@@ -44,7 +44,3 @@ border-left: 1px solid #EEEEEE;
 border-right:1px solid #EEEEEE ;
 }
 
-.portfolio-list__item:hover {
- box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
- border-radius: 4px;
-}
