--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,22 +1,22 @@
-@import "./base/normalize";
-@import "./base/fonts";
-@import "./base/reser";
+@import "./utils/normalize";
+@import "./utils/fonts";
 @import "./utils/vars";
 @import "./utils/placeholder";
+@import "./base/comon";
 @import "./components/container";
-@import "./components/header";
-@import "./components/logo";
-@import "./components/hero";
-@import "./components/properties";
-@import "./components/foto";
-@import "./components/team";
 @import "./components/form";
 @import "./components/modal";
 @import "./components/anime";
-@import "./components/footer";
-@import "./components/buttons";
-@import "./components/menu";
-@import "./components/portfolio";
+@import "./layout/header";
+@import "./layout/logo";
+@import "./layout/hero";
+@import "./layout/properties";
+@import "./layout/foto";
+@import "./layout/team";
+@import "./layout/footer";
+@import "./layout/menu";
+@import "./pages/buttons";
+@import "./pages/portfolio";
 
 
 
